--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <i class="fab fa-tiktok" aria-hidden="true"></i>
         </a>
         <!-- Kwai: Font Awesome pode não ter um ícone de marca; usamos ícone genérico de vídeo como fallback -->
-        <a href="#" class="social-link" aria-label="Kwai (ícone genérico)">
+        <a href="https://www.kwai.com/@CanalCienciaNews" class="social-link" aria-label="Kwai (ícone genérico)">
           <i class="fa-solid fa-video" aria-hidden="true"></i>
         </a>
         <!-- WhatsApp -->
@@ -341,7 +341,7 @@
           <i class="fab fa-tiktok" aria-hidden="true"></i>
         </a>
         <!-- Kwai: Font Awesome pode não ter um ícone de marca; usamos ícone genérico de vídeo como fallback -->
-        <a href="#" class="social-link" aria-label="Kwai (ícone genérico)">
+        <a href="https://www.kwai.com/@CanalCienciaNews" class="social-link" aria-label="Kwai (ícone genérico)">
           <i class="fa-solid fa-video" aria-hidden="true"></i>
         </a>
         <!-- WhatsApp -->
