--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <link rel="canonical" href="https://canalciencianews.github.io/index.html" />
 
   <!-- Open Graph / Social -->
-  <meta property="og:site_name" content="Ciência News" />
-  <meta property="og:title" content="Ciência News — Uma pílula com notícias sobre ciências" />
-  <meta property="og:description" content="Ciência News — Uma pílula com notícias sobre ciências." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://canalciencianews.github.io/index.html" />
-  <meta property="og:image" content="https://canalciencianews.github.io/logo.png" />
+  <!-- Thumbnail para compartilhamento social -->
+<meta property="og:image" content="thumbnail.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="Ciência News — Uma pílula com notícias sobre ciências" />
+
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
