--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
   <!-- Canonical (GitHub Pages) -->
   <link rel="canonical" href="https://canalciencianews.github.io/index.html" />
 
-  <!-- Open Graph / Social -->
-  <!-- Thumbnail para compartilhamento social -->
+  <!-- Open Graph / Social Sharing -->
+<meta property="og:site_name" content="Ciência News" />
+<meta property="og:title" content="Ciência News — Uma pílula com notícias sobre ciências" />
+<meta property="og:description" content="Atualizações rápidas, confiáveis e curtas sobre ciência." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://canalciencianews.github.io/index.html" />
 <meta property="og:image" content="thumbnail.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 <meta property="og:image:alt" content="Ciência News — Uma pílula com notícias sobre ciências" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@CienciaNewsOficial" />
+<meta name="twitter:title" content="Ciência News — Uma pílula com notícias sobre ciências" />
+<meta name="twitter:description" content="Atualizações rápidas, confiáveis e curtas sobre ciência." />
+<meta name="twitter:image" content="thumbnail.png" />
+<meta name="twitter:image:alt" content="Ciência News — Uma pílula com notícias sobre ciências" />
+
 
 
   <!-- Favicon -->
