--- a/index.html
+++ b/index.html
@@ -176,6 +176,58 @@
 <main id="mainContent" class="site-main bg-white" role="main">
   <div class="container main-inner py-8">
 
+    <!--Artigo Especial-->
+    <article class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-lg overflow-hidden p-6">
+  <!-- Título -->
+  <header class="mb-6 border-b border-gray-200 pb-4">
+    <h1 class="text-2xl md:text-3xl font-bold text-gray-900 leading-snug">
+      O Planeta mais parecido com a Terra TRAPPIST-1 Pode ter atmosfera habitável
+    </h1>
+  </header>
+
+  <!-- Conteúdo -->
+  <section class="space-y-4 text-gray-700 text-base md:text-lg leading-relaxed">
+    <p>
+      O sistema <strong>TRAPPIST-1</strong>, a 40 anos-luz da Terra, chama atenção desde 2016 por seus sete planetas rochosos. 
+      Agora, com observações do telescópio espacial <strong>James Webb</strong>, o planeta TRAPPIST-1e surge como um dos mais promissores candidatos a uma “segunda Terra”.
+    </p>
+
+    <p>
+      Localizado na zona habitável de sua estrela, o planeta pode abrigar água líquida. Os cientistas encontraram sinais de que ele possivelmente tem 
+      <strong>atmosfera rica em nitrogênio</strong>, algo essencial para sustentar condições de vida.
+    </p>
+
+    <p>
+      A análise ainda é inicial e enfrenta dificuldades devido à intensa atividade da estrela TRAPPIST-1. Mesmo assim, a possibilidade de uma atmosfera diferenciada em TRAPPIST-1e anima a comunidade científica e fortalece a busca por mundos semelhantes ao nosso.
+    </p>
+  </section>
+
+  <!-- Vídeo incorporado -->
+  <div class="mt-6">
+    <div class="aspect-w-16 aspect-h-9">
+      <iframe 
+        class="w-full h-96 rounded-xl shadow-md"
+        src="https://www.youtube.com/embed/GXu1Clb6vbs?si=BV3H9V95-Roeejvv" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+
+  <!-- Botão para assistir no YouTube -->
+  <div class="mt-6 flex justify-center">
+    <a href="https://youtu.be/GXu1Clb6vbs?si=BV3H9V95-Roeejvv" target="_blank" 
+       class="inline-flex items-center gap-2 bg-red-600 hover:bg-red-700 text-white font-medium px-6 py-3 rounded-full shadow-lg transition duration-300">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-current" viewBox="0 0 24 24">
+        <path d="M19.615 3.184c-1.604-.184-8.031-.184-8.031-.184s-6.428 0-8.031.184C2.356 3.37 1.37 4.356 1.184 5.984 1 7.588 1 12 1 12s0 4.412.184 6.016c.186 1.628 1.172 2.615 2.369 2.8 1.603.184 8.031.184 8.031.184s6.427 0 8.031-.184c1.197-.185 2.183-1.172 2.369-2.8.184-1.604.184-6.016.184-6.016s0-4.412-.184-6.016c-.186-1.628-1.172-2.615-2.369-2.8zM9.75 15.5v-7l6.5 3.5-6.5 3.5z"/>
+      </svg>
+      Assistir no YouTube
+    </a>
+  </div>
+    </article>
+    
     <!-- ===========================
          SEÇÃO DE VÍDEOS E MATÉRIA EM DESTAQUE
          - Grid responsivo com 3 vídeos
