--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <i class="fa-solid fa-video" aria-hidden="true"></i>
         </a>
         <!-- WhatsApp -->
-        <a href="https://wa.me/5599999999999" class="social-link" aria-label="WhatsApp">
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" class="social-link" aria-label="WhatsApp">
           <i class="fab fa-whatsapp" aria-hidden="true"></i>
         </a>
       </div>
@@ -411,7 +411,7 @@
           <i class="fa-solid fa-video" aria-hidden="true"></i>
         </a>
         <!-- WhatsApp -->
-        <a href="https://wa.me/5599999999999" class="social-link" aria-label="WhatsApp">
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" class="social-link" aria-label="WhatsApp">
           <i class="fab fa-whatsapp" aria-hidden="true"></i>
         </a>
       </div>
