--- a/index.html
+++ b/index.html
@@ -240,60 +240,61 @@
   <div id="feed" class="grid gap-6 md:grid-cols-3 sm:grid-cols-1"></div>
     </section>
     
-    <!-- ===========================
-         SEÇÃO DE VÍDEOS E MATÉRIA EM DESTAQUE
-         - Grid responsivo com 3 vídeos
-         - Cada vídeo: título, descrição resumida, botão com ícone YouTube
-         - Matéria em destaque: retângulo bege, imagem à esquerda, texto à direita
-         =========================== -->
+  <!-- ===========================
+     SEÇÃO DE VÍDEOS E MATÉRIA EM DESTAQUE
+     - Grid responsivo com 3 vídeos
+     - Cada vídeo: título, descrição resumida, botão com ícone YouTube
+     - Matéria em destaque: retângulo bege, imagem à esquerda, texto à direita
+     =========================== -->
 
-    <!-- CDN Font Awesome para ícones -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pVfG+Y8Vv3wYkXDZ+0EzHn+uHyl25k67zE1eLvBrhrc0XwtKX8p3iK7h7v+Y+DZf0NsQKx/kS4djG7xEX1lKwg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- CDN Font Awesome para ícones -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pVfG+Y8Vv3wYkXDZ+0EzHn+uHyl25k67zE1eLvBrhrc0XwtKX8p3iK7h7v+Y+DZf0NsQKx/kS4djG7xEX1lKwg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <section id="videos-e-destaque" class="py-16 bg-gray-50">
-      <!-- GRID DE VÍDEOS -->
-      <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
-        <div class="grid md:grid-cols-3 gap-8">
+<section id="videos-e-destaque" class="py-16 bg-gray-50">
+  <!-- GRID DE VÍDEOS -->
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
+    <div class="grid md:grid-cols-3 gap-8">
 
-          <!-- VÍDEO 1 -->
-          <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-            <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/K-ZSYymGixo" title="Cristal do Tempo" frameborder="0" allowfullscreen></iframe>
-            <div class="p-4">
-              <h3 class="text-xl font-semibold text-gray-800 mb-2">CIENTISTAS CRIAM UM CRISTAL DO TEMPO QUE VOCÊ PODE VER A OLHO NU!</h3>
-              <p class="text-gray-600 mb-4">Físicos criam um novo tipo de cristal do tempo visível a olho nu, abrindo possibilidades de armazenamento e experimentos quânticos.</p>
-              <a href="https://youtu.be/K-ZSYymGixo?si=zwEs8bc7_ValJjmf" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-                <i class="fab fa-youtube mr-2"></i> Assista no YouTube
-              </a>
-            </div>
-          </div>
-
-          <!-- VÍDEO 2 -->
-          <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-            <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/uRQcaaXzrbA" title="Buracos Negros Primordiais" frameborder="0" allowfullscreen></iframe>
-            <div class="p-4">
-              <h3 class="text-xl font-semibold text-gray-800 mb-2">ENCONTRAMOS OS BURACOS NEGROS PRIMORDIAIS DE HAWKING OU ESTAMOS ERRADOS SOBRE OS SUPERMASSIVOS?</h3>
-              <p class="text-gray-600 mb-4">Descoberta de buracos negros primordiais desafia nossa compreensão da formação das galáxias e da evolução do universo primitivo.</p>
-              <a href="https://youtu.be/uRQcaaXzrbA?si=kTrLETdmtJz0Y6iK" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-                <i class="fab fa-youtube mr-2"></i> Assista no YouTube
-              </a>
-            </div>
-          </div>
-
-          <!-- VÍDEO 3 -->
-          <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-            <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/mv0EBakXJDo" title="Efeito Schwinger" frameborder="0" allowfullscreen></iframe>
-            <div class="p-4">
-              <h3 class="text-xl font-semibold text-gray-800 mb-2">ALGO SURGE DO NADA! FÍSICOS SIMULAM EFEITO SCHWINGER EM SUPERFLUIDO</h3>
-              <p class="text-gray-600 mb-4">Pesquisadores simulam o efeito Schwinger em superfluido, oferecendo insights sobre fenômenos quânticos e a criação de partículas do nada.</p>
-              <a href="https://youtu.be/mv0EBakXJDo?si=IOQxzI68EYM8tin2" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-                <i class="fab fa-youtube mr-2"></i> Assista no YouTube
-              </a>
-            </div>
-          </div>
-
+      <!-- VÍDEO 1 (Cristal do Tempo) -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/K-ZSYymGixo" title="Cristal do Tempo" frameborder="0" allowfullscreen></iframe>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">CIENTISTAS CRIAM UM CRISTAL DO TEMPO QUE VOCÊ PODE VER A OLHO NU!</h3>
+          <p class="text-gray-600 mb-4">Físicos criam um novo tipo de cristal do tempo visível a olho nu, abrindo possibilidades de armazenamento e experimentos quânticos.</p>
+          <a href="https://youtu.be/K-ZSYymGixo?si=zwEs8bc7_ValJjmf" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+          </a>
         </div>
       </div>
+
+      <!-- VÍDEO 2 (NASA Viking 1976) -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/dlGDojJp2uQ" title="Viking 1 e Viking 2 em Marte" frameborder="0" allowfullscreen></iframe>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">AS PRIMEIRAS SONDAS DA NASA POUSAM EM MARTE: VIKING 1 E VIKING 2 (1976)</h3>
+          <p class="text-gray-600 mb-4">Em 1976, a NASA fez história ao pousar em Marte suas primeiras sondas: a Viking 1 e a Viking 2, abrindo caminho para a exploração do planeta vermelho.</p>
+          <a href="https://youtu.be/dlGDojJp2uQ?si=eADHsyeHKjf_7tGE" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+          </a>
+        </div>
+      </div>
+
+      <!-- VÍDEO 3 (Sensores Quânticos) -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/kaTh4qwc6YQ" title="Sensores Quânticos" frameborder="0" allowfullscreen></iframe>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">SENSORES QUÂNTICOS MAIS PRECISOS DO MUNDO FORAM CRIADOS!</h3>
+          <p class="text-gray-600 mb-4">A física quântica sob condições extremas revela uma revolução: sensores capazes de resistir a pressões intensas e desvendar segredos da matéria, geologia e astronomia.</p>
+          <a href="https://youtu.be/kaTh4qwc6YQ?si=0iF7Ik6lg4m7dw8z" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
       <!-- MATÉRIA EM DESTAQUE -->
       <div class="container mx-auto px-4 mt-16">
@@ -369,12 +370,6 @@
   </div>
 </main>
 
-
-    </div>
-  </main>
-
-  </div>
-</main>
 
   <!-- ===========================
        RODAPÉ (FOOTER)
