--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     <!-- ===== FEED PHYS.ORG ===== -->
     <section class="max-w-6xl mx-auto p-4">
-  <h1 class="text-2xl font-bold mb-6 text-center">Arqueologia e Fósseis - Phys.org</h1>
+  <h1 class="text-2xl font-bold mb-6 text-center">Artigos Recomendados</h1>
   <div id="feed" class="grid gap-6 md:grid-cols-3 sm:grid-cols-1"></div>
     </section>
     
@@ -315,56 +315,6 @@
       </div>
 
     </section>
-
-<!-- ===========================
-     SEÇÃO DE CARDS - ARTIGOS RECOMENDADOS (VERDE ESCURO)
-     - Cards em verde escuro
-     - Títulos em bege
-     - Descrições em branco
-     - Botões dourados com texto preto ("Leia mais")
-     - Responsivo, estilo moderno com Tailwind CSS
-     =========================== -->
-<section id="Artigos Recomendados" class="py-16 bg-gray-50">
-  <div class="container mx-auto px-4">
-    <h2 class="text-3xl font-bold text-gray-800 mb-12 text-center">Artigos recomendados</h2>
-    
-    <div class="grid md:grid-cols-3 gap-8">
-
-      <!-- CARD 1 -->
-      <div class="bg-green-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
-        <img src="https://i.postimg.cc/Kc7hQDSC/astronomers-discover-c.jpg" alt="Explosão de raios gama" class="w-full h-48 object-cover">
-        <div class="p-6 flex flex-col flex-grow">
-          <h3 class="text-beige-300 font-bold text-lg mb-2">Explosão inédita de raios gama sugere raro buraco negro</h3>
-          <p class="text-white text-sm mb-4 flex-grow">Uma equipe de astrônomos observou uma explosão no universo diferente de tudo o que já foi testemunhado. Os raios gama vindos de fora da Via Láctea se repetiram várias vezes ao longo de um único dia. As explosões de raios gama (GRBs)...</p>
-          <a href="https://phys.org/news/2025-09-unprecedented-gamma-ray-hints-rare.html" target="_blank" class="inline-block px-4 py-2 bg-yellow-400 text-black font-semibold rounded hover:bg-yellow-500 transition w-max">Leia mais</a>
-        </div>
-      </div>
-
-      <!-- CARD 2 -->
-      <div class="bg-green-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
-        <img src="https://i.postimg.cc/vZTRYRgd/fossil-skull-provides.jpg" alt="Crânio fóssil de urso" class="w-full h-48 object-cover">
-        <div class="p-6 flex flex-col flex-grow">
-          <h3 class="text-beige-300 font-bold text-lg mb-2">Crânio fóssil fornece primeira prova de que ursos lutaram em anfiteatros romanos</h3>
-          <p class="text-white text-sm mb-4 flex-grow">Para os cidadãos do Império Romano, uma visita ao anfiteatro significava um dia emocionante de entretenimento. No entanto, para muitos gladiadores e animais envolvidos, era uma luta pela sobrevivência. Um novo estudo publicado em...</p>
-          <a href="https://phys.org/news/2025-09-fossil-skull-evidence-fought-roman.html" target="_blank" class="inline-block px-4 py-2 bg-yellow-400 text-black font-semibold rounded hover:bg-yellow-500 transition w-max">Leia mais</a>
-        </div>
-      </div>
-
-      <!-- CARD 3 -->
-      <div class="bg-green-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
-        <img src="https://i.postimg.cc/4dCjQm8J/can-we-detect-alzheime-1.jpg" alt="Alzheimer" class="w-full h-48 object-cover">
-        <div class="p-6 flex flex-col flex-grow">
-          <h3 class="text-beige-300 font-bold text-lg mb-2">Pesquisa revela alvo promissor para combater Alzheimer décadas antes dos sintomas</h3>
-          <p class="text-white text-sm mb-4 flex-grow">Uma pessoa pode desenvolver Alzheimer anos antes de perceber. O apagamento desorientador de memórias, da linguagem, dos pensamentos — em essência, de tudo que compõe a identidade única de alguém — é o ato final desta doença enigmática...</p>
-          <a href="https://medicalxpress.com/news/2025-09-reveals-thwart-alzheimer-decades-symptoms.html" target="_blank" class="inline-block px-4 py-2 bg-yellow-400 text-black font-semibold rounded hover:bg-yellow-500 transition w-max">Leia mais</a>
-        </div>
-      </div>
-
-    </div>
-  </div>
-  </section>
-<!-- FIM DA SEÇÃO DE CARDS - ARTIGOS RECOMENDADOS -->
-
   </div>
 </main>
 
