Edição do Artigo Especial index.html

--- a/index.html
+++ b/index.html
@@ -176,30 +176,53 @@
   <!-- Título -->
   <header class="mb-6 border-b border-gray-200 pb-4">
     <h1 class="text-2xl md:text-3xl font-bold text-gray-900 leading-snug">
-      Cientistas captam “toque final” de fusão de buracos negros e confirmam teorias de Einstein e Hawking
+      INÉDITO! CRUZ DE EINSTEIN REVELA MATÉRIA ESCURA!
     </h1>
   </header>
 
   <!-- Conteúdo -->
   <section class="space-y-4 text-gray-700 text-base md:text-lg leading-relaxed">
     <p>
-      Ondas gravitacionais registram o momento final de fusão de dois gigantescos buracos negros, cada um com dezenas de vezes a massa do Sol. 
-      Essa colisão produz o chamado <strong>anelamento</strong>, uma vibração do novo buraco negro semelhante ao toque de um sino cósmico.
+      No vasto cosmos, a gravidade às vezes se transforma em um artista cósmico. Quando uma galáxia muito massiva fica exatamente no caminho da luz 
+      de uma galáxia mais distante, o espaço-tempo é distorcido, e a imagem do objeto de fundo pode se multiplicar em arcos, anéis ou cruzes brilhantes. 
+      Esse fenômeno é chamado de <strong>lente gravitacional</strong>.
     </p>
 
     <p>
-      As medições detalhadas do <strong>LIGO</strong> permitem observar essas ondas, confirmando previsões de Albert Einstein sobre a relatividade geral 
-      e reforçando a teoria do físico britânico <strong>Stephen Hawking</strong>, de que a área do horizonte de eventos nunca diminui.
+      E agora, os astrônomos acabam de revelar um exemplo extraordinário. Uma equipe internacional liderada por <strong>Pierre Cox</strong> identificou 
+      <strong>HerS-3</strong>, uma galáxia formadora de estrelas a mais de 11 bilhões de anos-luz de distância, que aparece distorcida na forma de uma 
+      <strong>Cruz de Einstein</strong> com cinco imagens distintas — algo jamais visto antes em sistemas desse tipo observados no submilímetro.
     </p>
 
     <p>
-      Essa descoberta é a primeira evidência clara de que buracos negros astrofísicos se comportam como previstos pelo físico <strong>Roy Kerr</strong>, 
-      dependendo apenas de sua massa e rotação. A observação também abre caminho para futuras investigações da gravidade quântica e da natureza do universo.
+      As observações, feitas com o <strong>ALMA</strong>, o <strong>NOEMA</strong> e o <strong>Telescópio Espacial Hubble</strong>, mostraram que a luz 
+      de HerS-3 é amplificada por um grupo de galáxias a cerca de 7 bilhões de anos-luz da Terra. Mas havia um enigma: os modelos de lente que consideravam 
+      apenas as galáxias visíveis não conseguiam reproduzir a complexa configuração da cruz.
     </p>
 
     <p>
-      Em outras palavras: conseguimos “ouvir” os tons do universo, comprovando teorias que antes existiam apenas no papel e aproximando a ciência de entender 
-      os segredos mais profundos do espaço-tempo.
+      A solução surpreendente veio quando os cientistas adicionaram ao modelo um quinto componente massivo, invisível. Sem qualquer galáxia detectada naquela 
+      posição, a única explicação plausível era a presença de um enorme <strong>halo de matéria escura</strong>. Esse halo, pertencente ao grupo de galáxias 
+      no primeiro plano, seria o responsável por completar o efeito de lente e gerar as cinco imagens da Cruz de Einstein.
+    </p>
+
+    <p>
+      Na prática, HerS-3 se transformou em um laboratório cósmico único. Através desse raro alinhamento, os astrônomos conseguem observar em detalhes uma galáxia 
+      em intenso surto de formação estelar no auge da evolução cósmica, e ao mesmo tempo mapear diretamente a distribuição de matéria escura em grande escala.
+    </p>
+
+    <p>
+      Publicado no <strong>Astrophysical Journal</strong> em setembro de 2025, este estudo mostra não apenas um espetáculo visual, mas também um lembrete de que 
+      a maior parte da massa do universo permanece invisível.
+    </p>
+
+    <p>
+      E fica a grande questão: quantos outros halos de matéria escura como esse ainda estão escondidos, moldando o cosmos sem jamais emitir luz?
+    </p>
+
+    <p>
+      Se você ficou impressionado com essa descoberta e quer acompanhar os próximos capítulos da exploração do universo invisível, inscreva-se no canal e ative o sininho. 
+      Afinal, a ciência não para — e o próximo mistério pode estar bem diante dos nossos olhos.
     </p>
   </section>
 
@@ -208,7 +231,7 @@
     <div class="aspect-w-16 aspect-h-9">
       <iframe 
         class="w-full h-96 rounded-xl shadow-md"
-        src="https://www.youtube.com/embed/lkPCJiCxCbM?si=f6xKswDTVDaV7_Z6" 
+        src="https://www.youtube.com/embed/hF_4n3e5xuM?si=JBq4bBpxZY0gauJs" 
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -219,7 +242,7 @@
 
   <!-- Botão para assistir no YouTube -->
   <div class="mt-6 flex justify-center">
-    <a href="https://youtu.be/lkPCJiCxCbM?si=f6xKswDTVDaV7_Z6" target="_blank" 
+    <a href="https://youtu.be/hF_4n3e5xuM?si=JBq4bBpxZY0gauJs" target="_blank" 
        class="inline-flex items-center gap-2 bg-red-600 hover:bg-red-700 text-white font-medium px-6 py-3 rounded-full shadow-lg transition duration-300">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-current" viewBox="0 0 24 24">
         <path d="M19.615 3.184c-1.604-.184-8.031-.184-8.031-.184s-6.428 0-8.031.184C2.356 3.37 1.37 4.356 1.184 5.984 1 7.588 1 12 1 12s0 4.412.184 6.016c.186 1.628 1.172 2.615 2.369 2.8 1.603.184 8.031.184 8.031.184s6.427 0 8.031-.184c1.197-.185 2.183-1.172 2.369-2.8.184-1.604.184-6.016.184-6.016s0-4.412-.184-6.016c-.186-1.628-1.172-2.615-2.369-2.8zM9.75 15.5v-7l6.5 3.5-6.5 3.5z"/>
@@ -227,7 +250,7 @@
       Assistir no YouTube
     </a>
   </div>
-        </article>
+</article>
 
     <!-- ===== FEED PHYS.ORG ===== -->
     <section class="max-w-6xl mx-auto p-4">
