--- a/index.html
+++ b/index.html
@@ -171,6 +171,53 @@
 <main id="mainContent" class="site-main bg-white" role="main">
   <div class="container main-inner py-8">
 
+    <!-- ===== Vídeos mais vistos do Ciência News ===== -->
+    <section style="max-width:1200px; margin:40px auto; padding:20px; background:#fff; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
+
+  <!-- Título -->
+  <div style="text-align:center; margin-bottom:20px;">
+    <h2 style="font-size:1.5rem; font-weight:600; color:#222; margin:0;">
+      Mais vistos do Ciência News no YouTube
+    </h2>
+  </div>
+
+  <!-- Container de vídeos horizontal e responsivo -->
+  <div style="display:flex; gap:20px; justify-content:center; flex-wrap:wrap;">
+
+    <!-- Vídeo 1 -->
+    <div style="flex:1 1 300px; max-width:calc(33.333% - 13.33px); display:flex; flex-direction:column; align-items:center; box-sizing:border-box;">
+      <div style="width:100%; height:0; padding-bottom:56.25%; position:relative;">
+        <iframe src="https://www.youtube.com/embed/SQ6i4ea5gW4" style="position:absolute; top:0; left:0; width:100%; height:100%; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.1);" allowfullscreen></iframe>
+      </div>
+      <a href="https://www.youtube.com/watch?v=SQ6i4ea5gW4" target="_blank" style="margin-top:12px; padding:10px 20px; background:#cc0000; color:#fff; border-radius:24px; text-decoration:none; font-size:0.9rem; font-weight:500;">
+        Assistir no YouTube
+      </a>
+    </div>
+
+    <!-- Vídeo 2 -->
+    <div style="flex:1 1 300px; max-width:calc(33.333% - 13.33px); display:flex; flex-direction:column; align-items:center; box-sizing:border-box;">
+      <div style="width:100%; height:0; padding-bottom:56.25%; position:relative;">
+        <iframe src="https://www.youtube.com/embed/wVkEAwrEIS0" style="position:absolute; top:0; left:0; width:100%; height:100%; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.1);" allowfullscreen></iframe>
+      </div>
+      <a href="https://www.youtube.com/watch?v=wVkEAwrEIS0" target="_blank" style="margin-top:12px; padding:10px 20px; background:#cc0000; color:#fff; border-radius:24px; text-decoration:none; font-size:0.9rem; font-weight:500;">
+        Assistir no YouTube
+      </a>
+    </div>
+
+    <!-- Vídeo 3 -->
+    <div style="flex:1 1 300px; max-width:calc(33.333% - 13.33px); display:flex; flex-direction:column; align-items:center; box-sizing:border-box;">
+      <div style="width:100%; height:0; padding-bottom:56.25%; position:relative;">
+        <iframe src="https://www.youtube.com/embed/yJkLrHIYKBc" style="position:absolute; top:0; left:0; width:100%; height:100%; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.1);" allowfullscreen></iframe>
+      </div>
+      <a href="https://www.youtube.com/watch?v=yJkLrHIYKBc" target="_blank" style="margin-top:12px; padding:10px 20px; background:#cc0000; color:#fff; border-radius:24px; text-decoration:none; font-size:0.9rem; font-weight:500;">
+        Assistir no YouTube
+      </a>
+    </div>
+
+  </div>
+</section>
+
+
     <!--Artigo Especial-->
     <article class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-lg overflow-hidden p-6">
   <!-- Título -->
