--- a/index.html
+++ b/index.html
@@ -171,6 +171,44 @@
 <main id="mainContent" class="site-main bg-white" role="main">
   <div class="container main-inner py-8">
 
+    <!-- ===== SECTION ESPECIAL ===== -->
+    <section class="py-10">
+  <div class="container mx-auto px-4">
+    <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 overflow-hidden">
+      <div class="grid md:grid-cols-2 gap-6 items-center">
+        
+        <!-- Vídeo responsivo 16:9 -->
+        <div class="relative w-full" style="padding-bottom: 56.25%;">
+          <iframe class="absolute top-0 left-0 w-full h-full rounded-l-2xl"
+            src="https://www.youtube.com/embed/_CD6Nf_WWf4" 
+            title="PARADOXO QUE FAZ 1 VIRAR 2! Banach–Tarski" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+        </div>
+
+        <!-- Conteúdo -->
+        <div class="p-6">
+          <h2 class="text-2xl font-bold text-gray-800 mb-4">
+            PARADOXO QUE FAZ 1 VIRAR 2! Banach–Tarski
+          </h2>
+          <p class="text-gray-700 mb-4">
+            E se fosse possível pegar uma esfera, cortá-la em partes e remontar 
+            para formar duas esferas idênticas? Esse é o intrigante 
+            <strong>Paradoxo de Banach–Tarski</strong>, um conceito matemático 
+            que mostra como o infinito pode desafiar nossa intuição.
+          </p>
+          <a href="https://youtu.be/_CD6Nf_WWf4" target="_blank"
+             class="inline-flex items-center px-5 py-2 bg-red-600 text-white font-medium rounded-full shadow hover:bg-red-700 transition duration-300">
+            <i class="bi bi-youtube text-lg mr-2"></i> Veja mais
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+    </section>
+
     <!-- ===== Vídeos mais vistos do Ciência News ===== -->
    <section style="max-width:1200px; margin:40px auto; padding:20px;">
 
