--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       </div>
 
       <!-- Botão toggle do menu mobile -->
-      <button class="nav-toggle" id="navToggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobileNav">
-        <span class="sr-only">Abrir menu</span>
-        <i class="fa-solid fa-bars"></i>
-      </button>
+<button class="nav-toggle" id="navToggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobileNav">
+  <span class="sr-only">Abrir menu</span>
+  ☰  <!-- ícone visível para o hamburguer -->
+</button>
     </div>
 
     <!-- Menu Mobile (escondido por padrão) -->
