--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <title>Ciência News — Uma pílula com notícias sobre ciências</title>
   <meta name="description" content="Ciência News — Uma pílula com notícias sobre ciências. Atualizações rápidas, confiáveis e curtas sobre ciência." />
 
-  <!-- Canonical (GitHub Pages) -->
-  <link rel="canonical" href="https://canalciencianews.github.io/index.html" />
+<!-- Canonical -->
+<link rel="canonical" href="https://portalciencianews.com.br/" />
 
-  <!-- Open Graph / Social Sharing -->
+<!-- Open Graph / Social Sharing -->
 <meta property="og:site_name" content="Ciência News" />
 <meta property="og:title" content="Ciência News — Uma pílula com notícias sobre ciências" />
 <meta property="og:description" content="Atualizações rápidas, confiáveis e curtas sobre ciência." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://canalciencianews.github.io/index.html" />
+<meta property="og:url" content="https://portalciencianews.com.br/" />
 <meta property="og:image" content="thumbnail.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1200" />
@@ -33,6 +33,7 @@
 <meta name="twitter:description" content="Atualizações rápidas, confiáveis e curtas sobre ciência." />
 <meta name="twitter:image" content="thumbnail.png" />
 <meta name="twitter:image:alt" content="Ciência News — Uma pílula com notícias sobre ciências" />
+
 
 
 
