--- a/index.html
+++ b/index.html
@@ -209,6 +209,35 @@
   </div>
     </section>
 
+    <!-- Section de destaque com card e descrição -->
+<section class="max-w-5xl mx-auto px-4 py-8">
+  <div class="flex flex-col md:flex-row bg-blue-900 shadow-lg rounded-2xl overflow-hidden">
+    
+    <!-- Imagem à esquerda -->
+    <div class="md:w-1/2">
+      <img 
+        src="https://i.postimg.cc/rwgdJD0K/hq720.jpg" 
+        alt="Representação artística dos gravitinos" 
+        class="w-full h-full object-cover"
+      >
+    </div>
+
+    <!-- Conteúdo à direita -->
+    <div class="md:w-1/2 p-6 flex flex-col justify-center text-white">
+      <h3 class="text-2xl sm:text-3xl font-bold mb-4">
+        Descubra o que os gravitinos podem revelar sobre a matéria escura
+      </h3>
+      <p class="mb-6 text-gray-100 leading-relaxed">
+        Explore a teoria inovadora que sugere que essas partículas superpesadas e carregadas podem ser a chave para entender o universo invisível que nos cerca.
+      </p>
+      <a href="https://portalciencianews.com.br/gravitino-candidato-materia-escura.html" 
+         class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2 px-4 rounded transition-colors duration-300 w-max">
+        Ler mais
+      </a>
+    </div>
+  </div>
+</section>
+
     <!-- ===== Vídeos mais vistos do Ciência News ===== -->
    <section style="max-width:1200px; margin:40px auto; padding:20px;">
 
